--- a/public/landingpage/assets/css/main.css
+++ b/public/landingpage/assets/css/main.css
@@ -1687,6 +1687,22 @@ section,
   z-index: 99999 !important;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
+}
+
+.footer {
+  margin-top: auto;
+}
 
 /*--------------------------------------------------------------
 # Starter Section Section
